cmake_minimum_required(VERSION 3.19)
project(module04)
project(exercise01)
project(study-async-and-future)
project(study-future-and-promise)

set(CMAKE_CXX_STANDARD 17)

add_executable(module04 main.cpp)
add_executable(exercise01 exercise01.cpp)
add_executable(study-async-and-future study-async-and-future.cpp)
add_executable(study-future-and-promise study-future-and-promise.cpp)